--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,8 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_splash">SplashActivity</string>
     <string name="title_activity_login">LoginActivity</string>
+    <string name="title_activity_my_collection">MyCollectionActivity</string>
+
+    <string name="hello_world">Hello world!</string>
+    <string name="title_activity_random_fact">RandomFactActivity</string>
 </resources>
